--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -14,17 +14,19 @@ jobs:
     steps: 
     - name: Checkout
       uses: actions/checkout/@v2
-    
-    - uses: google-github-actions/setup-gcloud@v0
+
+    - id: 'auth' # aunthenticate
+      uses: 'google-github-actions/auth@v1'
       with:
-        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-        project_id: ${{ env.PROJECT_ID }}
-        export_default_credentials: true
+        credentials_json: '${{ secrets.SERVICE_ACCOUNT_KEY }}'
+    
+    - name: 'Set up Cloud SDK'
+      uses: google-github-actions/setup-gcloud@v1
 
     - name: Build Docker Image 
       run: docker build -t $IMAGE_NAME:latest .
 
-    - name: Configure Docker Client # aunthenticate
+    - name: Configure Docker Client # aunthenticate to rep
       run: |-
         gcloud auth configure-docker --quiet
         gcloud auth configure-docker env.REGION-docker.pkg.dev --quiet
