--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -35,9 +35,10 @@ jobs:
     - name: Push Docker Image to Artifact Registry
       env:
         GIT_TAG: v0.1.0
+        REGION: us-west2
       run: |-
-        docker tag $IMAGE_NAME:latest env.REGION-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
-        docker tag $IMAGE_NAME:latest env.REGION-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
-        docker push env.REGION-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
-        docker push env.REGION-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+        docker tag $IMAGE_NAME:latest us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
+        docker tag $IMAGE_NAME:latest us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+        docker push us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
+        docker push us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
 
