--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Configure Docker Client # aunthenticate to rep
       run: |-
         gcloud auth configure-docker --quiet
-        gcloud auth configure-docker env.REGION-docker.pkg.dev --quiet
+        gcloud auth configure-docker us-west2-docker.pkg.dev --quiet
 
     - name: Push Docker Image to Artifact Registry
       env:
