--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -15,13 +15,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout/@v2
 
-    - id: 'auth' # aunthenticate
-      name: 'Authenticate to Google'
-      uses: 'google-github-actions/auth@v1'
+    - id: Auth # aunthenticate
+      name: Authenticate to Google
+      uses: google-github-actions/auth@v1
       with:
         credentials_json: '${{ secrets.SERVICE_ACCOUNT_KEY }}'
     
-    - name: 'Set up Cloud SDK'
+    - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
 
     - name: Build Docker Image 
@@ -35,10 +35,16 @@ jobs:
     - name: Push Docker Image to Artifact Registry
       env:
         GIT_TAG: v0.1.0
-        REGION: us-west2
       run: |-
         docker tag $IMAGE_NAME:latest us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
         docker tag $IMAGE_NAME:latest us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
         docker push us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
         docker push us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+
+    - id: Deploy
+      name: Deploy Docker Image to Cloud Run
+      uses: google-github-actions/deploy-cloudrun@v1
+      with:
+        service: 'delaysapi'
+        image: us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
 
