--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -45,6 +45,6 @@ jobs:
       name: Deploy Docker Image to Cloud Run
       uses: google-github-actions/deploy-cloudrun@v1
       with:
-        service: 'delaysapi'
+        service: delaysapi
         image: us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
 
