--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -46,9 +46,6 @@ jobs:
       uses: google-github-actions/deploy-cloudrun@v1
       with:
         service: delaysapi
-        no_traffic: true
-        image: us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
+        image: us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME
 
-    - name: Update Run Service Traffic
-      run: gcloud run services update-traffic delaysapi --to-latest --region=us-central1
 
