--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -26,7 +26,7 @@ jobs:
       uses: google-github-actions/setup-gcloud@v1
 
     - name: Build Docker Image 
-      run: docker build -t $IMAGE_NAME:latest .
+      run: docker build -t ${{ env.IMAGE_NAME }}:${{ github.sha }} .
 
     - name: Configure Docker Client # aunthenticate to rep
       run: |-
@@ -35,7 +35,7 @@ jobs:
 
     - name: Push Docker Image to Artifact Registry  
       run: |-
-        docker tag $IMAGE_NAME:latest ${{ env.REGION }}-docker.pkg.dev/$PROJECT_ID/${{ env.IMAGE_NAME }}/${{ env.REP_NAME }}:${{ github.sha }}
+        docker tag ${{ env.IMAGE_NAME }}:${{ github.sha }} ${{ env.REGION }}-docker.pkg.dev/$PROJECT_ID/${{ env.IMAGE_NAME }}/${{ env.REP_NAME }}:${{ github.sha }}
         docker push ${{ env.REGION }}-docker.pkg.dev/$PROJECT_ID/${{ env.IMAGE_NAME }}/${{ env.REP_NAME }}:${{ github.sha }}
 
     - id: Deploy
