--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       REP_NAME: images
+      PROJECT_ID: infra-hulling-390616
       REGION: us-central1
       IMAGE_NAME: flight-delays
       SERVICE_NAME: delaysapi
@@ -43,6 +44,6 @@ jobs:
       uses: google-github-actions/deploy-cloudrun@v1
       with:
         service: ${{ env.SERVICE_NAME }}
-        image: ${{ env.REGION }}-docker.pkg.dev/$PROJECT_ID/${{ env.REP_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        image: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REP_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
 
